--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,47 +1,67 @@
-<%- include('layout.ejs'); %>
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
+    <style>
+    .container{
+        position:absolute;
+        left: 50%;
+        top:50%;
+        transform: translateX(-50%) translateY(-50%);
+        border-radius: 10%;
+        width: 30%;
+        height: 60%;
+        background: #454545;
+    }
+    h2{
+        color: white;
+        font-family: 'Kdam Thmor Pro', sans-serif;
+        margin-left: 41%;
+    }
+    .input-group-addon{
+        margin-left: 20%;
+        margin-top: 5%;
+    }
+    </style>
+</head>
 <div class="container">
 <div class="row justify-content-center">
-                    <div class="col-md-8">
-                        <h2>NODE.JS MVC</h2>  
-                        <div class="card">
-                            <div class="card-header">Login</div>
-                            <div class="card-body">
+    <div class="col-md-8">
+        <h2>Login</h2>  
+        <div class="card">
+            <div class="card-body">
 
-                                <form class="form-horizontal" method="post" action="/login">
-
-                                
-                                    <div class="form-group">
-                                        <label for="email" class="cols-sm-2 control-label">Your Email</label>
-                                        <div class="cols-sm-10">
-                                            <div class="input-group">
-                                                <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-                                                <input type="text" class="form-control" name="email" id="email" placeholder="Enter your Email" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                    
-                                    <div class="form-group">
-                                        <label for="password" class="cols-sm-2 control-label">Password</label>
-                                        <div class="cols-sm-10">
-                                            <div class="input-group">
-                                                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                                                <input type="password" class="form-control" name="password" id="password" placeholder="Enter your Password" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                    
-                                    <div class="form-group ">
-                                        <button type="submit" class="btn btn-primary btn-lg btn-block login-button">Login</button>
-                                    </div>
-                                    <div class="login-register">
-                                        <a href="/register">Register</a>
-                                    </div>
-                                </form>
+                <form class="form-horizontal" method="post" action="/login">
+                    <div class="form-group">
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                                <input type="text" class="form-control" name="email" id="email" placeholder="Enter your Email" />
                             </div>
-
                         </div>
                     </div>
-                </div>
+                    
+                    <div class="form-group">
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                                <input type="password" class="form-control" name="password" id="password" placeholder="Enter your Password" />
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="form-group ">
+                        <button type="submit" class="btn btn-primary btn-lg btn-block login-button">Login</button>
+                    </div>
+                    <div class="login-register">
+                        <a href="/register">Register</a>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
 </div>
 
 </body>
