--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
     <style>
+    body {
+        background-image: url("../images/Fundo.png");
+        background-color: #3C2B2B;
+    }
     .container{
         position:absolute;
         left: 50%;
@@ -13,29 +17,59 @@
         height: 60%;
         background: #454545;
     }
-    h2{
+    h1{
         color: white;
         font-family: 'Kdam Thmor Pro', sans-serif;
-        margin-left: 41%;
+        margin-left: 40%;
     }
-    .input-group-addon{
-        margin-left: 20%;
+    .form-control{
+        margin-left: 15%;
         margin-top: 5%;
+        margin-bottom:3%;
+        width: 70%;
+        height: 10%;
+        background-color: rgba(196, 196, 196,0.4);
+        color: white;
+        border: 0px;
+        border-radius: 5px;
+        font-family: 'Kdam Thmor Pro', sans-serif;
+    }
+    .login-button{
+        background-color: #F02E2E;
+        width: 20%;
+        height: 10%;
+        color: #FFFFFF;
+        border: none;
+        font-family: 'Kdam Thmor Pro', sans-serif;
+        font-size:20px;
+        margin-left: 39%;
+        margin-top: 10%;
+    }
+    .login-register a{
+        color: #FFFFFF;
+        font-family: 'Kdam Thmor Pro', sans-serif;
+        font-size:14px;
+    }
+    .login-register{
+        margin-left: 5%;
+        margin-top: 5%;
+    }
+    ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+        color: black;
+        opacity: 1; /* Firefox */
     }
     </style>
 </head>
 <div class="container">
 <div class="row justify-content-center">
     <div class="col-md-8">
-        <h2>Login</h2>  
+        <h1>Login</h1>  
         <div class="card">
             <div class="card-body">
-
                 <form class="form-horizontal" method="post" action="/login">
                     <div class="form-group">
                         <div class="cols-sm-10">
                             <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
                                 <input type="text" class="form-control" name="email" id="email" placeholder="Enter your Email" />
                             </div>
                         </div>
@@ -44,17 +78,16 @@
                     <div class="form-group">
                         <div class="cols-sm-10">
                             <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
                                 <input type="password" class="form-control" name="password" id="password" placeholder="Enter your Password" />
                             </div>
                         </div>
                     </div>
                     
                     <div class="form-group ">
-                        <button type="submit" class="btn btn-primary btn-lg btn-block login-button">Login</button>
+                        <button type="submit" class="login-button">Entrar</button>
                     </div>
                     <div class="login-register">
-                        <a href="/register">Register</a>
+                        <a href="/register">Não tenho uma conta ?</a>
                     </div>
                 </form>
             </div>
