--- a/views/event.ejs
+++ b/views/event.ejs
@@ -60,7 +60,7 @@
     }
     #description{
         width:60%;
-        height: 30%;
+        height: 20%;
         margin-left: 16%;
     }
     #name{
@@ -77,6 +77,9 @@
     }
     #longitude{
         margin-left: 15.5%;
+    }
+    #creator{
+        margin-left: 18.5%;;
     }
     .submit-button{
         background-color: #F02E2E;
@@ -111,6 +114,10 @@
                 <input type="text" class="form-control" name="name" id="name" placeholder="Escreva o nome do evento" />
             </div>
             <div class="row">
+                <label>Criador</label> 
+                <input type="text" class="form-control" name="creator" id="creator" placeholder="Escreva o nome do criador" />
+            </div>
+            <div class="row">
                 <label>Inicio</label> 
                 <input type="datetime-local" class="form-control" name="start" id="start"/>
             </div>
@@ -124,7 +131,7 @@
             </div>
             <div class="row">
                 <label>Longitude</label> 
-                <input type="text" class="form-control" name="Longitude" id="Longitude" placeholder="Escreva a latitude do evento" />
+                <input type="text" class="form-control" name="longitude" id="longitude" placeholder="Escreva a latitude do evento" />
             </div>
             <div class="row">
                 <label id="descri">Descrição</label> 
