--- a/views/Publication.ejs
+++ b/views/Publication.ejs
@@ -4,6 +4,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        #menu{
+        position:absolute;
+        top:2%;
+        left: 68%;
+      }
+      #menu li{
+        margin-right: 10px;
+        display: inline;
+      }
+      #menu li a {
+        font-family: 'Kdam Thmor Pro', sans-serif;
+        color:white;
+        font-weight: bold;
+        font-size:16px;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      #menu li a:hover{
+        background-color: #e64545;
+      }
         header{
             background-color: #BF2626;
             height: 60px;
@@ -107,7 +127,7 @@
     </header>
 
     <div class = "form-background">
-        <form  method="post" action="/publicacoes/">
+        <form  method="post" action="/publicacoes/" enctype="multipart/form-data">
             <div class="row">
                 <label>Título</label> 
                 <input type="text" class="form-control" name="title" id="title" placeholder="Insira um título" />
@@ -130,7 +150,14 @@
                 <button type="submit" class="submit-button">Criar</button>
             </div>
         </form>
-        
+        <ul id="menu">
+            <li>
+                <a href="/dashboard">INICIO</a>
+            </li>
+            <li>
+              <a href="/eventos">EVENTOS</a>
+            </li>
+          </ul>
     </div>
 </body>
 </html>
