--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,16 +1,202 @@
-<%- include('layout.ejs'); %>
-<div class="container">
-    <div class="row justify-content-center">
+<!DOCTYPE html>
+<html>
+  <head>
+    <title><%= title %></title>
+    <link rel='stylesheet' href='/stylesheets/initialstyle.css' />
+    <style>
+      #menu{
+        position:absolute;
+        top:2%;
+        left: 68%;
+      }
+      #menu li{
+        margin-right: 10px;
+        display: inline;
+      }
+      #menu li a {
+        font-family: 'Kdam Thmor Pro', sans-serif;
+        color:white;
+        font-weight: bold;
+        font-size:16px;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      #menu li a:hover{
+        background-color: #e64545;
+      }
+      #header{
+          background-color: #BF2626;
+          height: 60px;
+          width: 100%;
+      }
 
-        <h3>My name is <%= user.name %> </h3> &nbsp;
-        <h3>I stay at <%= user.location %> </h3> <br>
+      #search{
+          position:absolute;
+          left: 10%;
+          top: 6.5%;
+          transform: translateY(-50%);
+          background-color: rgb(255, 255, 255,0.2);
+          border:none;
+          height: 4%;
+          width: 20%;
+      }
 
+      #icone{
+          position:absolute;
+          right: 5%;
+          top: 5.8%;
+          transform: translateY(-50%);
+      }
+
+      #mapa{
+          position:absolute;
+          height: 50%;
+          width: 50%;
+          left: 25%;
+          top: 15%;
+
+      }
+
+      .topic{
+          position:absolute;
+          height: 13%;
+          width: 100%;
+          top: 75%;
+          background-color: #BF2626;
+      }
+
+      .topic p{
+          color:#FFF;
+          font-size: 4vh;
+          font-weight: bold;
+          margin-left: 4%;
+          font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      }
+
+      ul{
+          position:absolute;
+          height: 13%;
+          width: 100%;
+          top: 88%;
+          list-style-type: none;
+          
+      }
+
+      .card{
+          float:left;
+          text-align: center;
+          padding-top: 1%;
+          box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+          margin-left: 1%;
+      }
+
+      li:hover {
+          box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+      }
+
+      #listinscricoes li img{
+          width: 70%;
+          border-radius: 5px;
+      }
+
+      #noticias{
+          position: absolute;
+          top: 130%;
+      }
+
+      #listnoticias{
+          position:absolute;
+          height: 13%;
+          width: 100%;
+          top: 144%;
+          list-style-type: none;
+      }
+
+      #listnoticias li{
+          position: relative;
+          width: 200px;
+          top: 0%;
+          float:left;
+      }
+
+      #listnoticias p{
+          position: absolute;
+          top: 0%;
+      }
+
+      .noticia{
+          width: 90%;
+          text-align: center;
+          padding-top: 1%;
+          box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+          margin-left: 1%;
+      }
+      div.noticia img{
+          width: 100%;
+      }
+
+      .wrapper {
+          position:absolute;
+          height: 13%;
+          width: 100%;
+          top: 144%;
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          gap: 10px;
+        }
+    </style>
+  </head>
+  <body>
+    <div id = "header">
+      <form>
+        <input id="search" type="text">
+      </form>
+      <image id="icone" src="images/icon.png" width="3.2%"></image>
     </div>
-</div>
-<div>
-    <a href="/register"> <button type="submit" class="btn btn-primary btn-lg btn-block login-button">Logout</button> </a>
-</div>
 
-</body>
+    <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3101408.6780743822!2d-79.26098141055174!3d21.690500135269545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1652744310748!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
 
+      <div id="inscricoes" class="topic">
+        <p>INSCRIÇÕES</p>
+      </div>
+      <div>
+        <ul id="listinscricoes">
+          <% cards.forEach(function(card){ %>
+            <li class="card">
+              <img src=<%= card.imagem %> />
+              <p><%= card.name %> </p>
+            </li>
+          <%});%>
+        </ul>
+      </div>
+      <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3101408.6780743822!2d-79.26098141055174!3d21.690500135269545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1652744310748!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
+
+      <div id="noticias" class="topic">
+        <p>Notícias</p>
+      </div>
+      <div class="wrapper">
+        <% noticias.forEach(function(noticia){ %>
+          <div class="noticia">
+            <img src=<%= noticia.imagem %> />
+            <p><%= noticia.name %> </p>
+          </div>
+        <%});%>
+      </div>
+      
+      
+      <ul id="menu">
+        <li>
+          <a href="/eventos">EVENTOS</a>
+        </li>
+        <li>
+          <a href="/publicacoes">PUBLICAÇÕES</a>
+        </li>
+      </ul>
+      
+    
+  </body>
 </html>
